# textutils-14

./: README.md  environment.yml  pyproject.toml
src/textutils/: average_word_lenght.py  collpase_duplicates.py  core.py  count_vowels.py  remove_punctuation.py  slugify.py  unique_words.py  word_lengths.py
tests/integration/: test_end_to_end.py
tests/unit/: test_core.py
